Fixed scroll position issue on mobile and desktop. Also added generate schedule and clear pin buttons for desktop view.

--- a/src/index.css
+++ b/src/index.css
@@ -307,7 +307,7 @@ body {
 }
 
 .btn-pin-active, .btn-pin-active-dark {
-    background-color: #FFC463;
+    background-color: #EDB576;
 }
 
 .btn-pin-active svg path, .btn-pin-active-dark svg path {
